--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,12 @@
+## API
 DATABASE_URL=
 PORT=
-SERVICE_PATH= 
+SERVICE_PATH=
 DEFAULT_PASSWORD=
-ENABLE_RUNNER_WORKER=
+FIREBASE_API_KEY=
+
+# PostgreSQL
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_PORT=
